Automatically backed up by Learn

--- a/app/views/delete.erb
+++ b/app/views/delete.erb
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <h2><%= @article.name %> will be deleted!</h2>
     <form>
-    <%= @article.name %> was deleted!
+    <input type ="submit" id= "submit" name= "ok">  
     </form>
   </body>
 </html>
